samples/_failures_safe/1761549466_92ba14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9925502.c:161: error: expected ‘;’, ‘,’ or ‘)’ at end of input
